# doctemplates

./: .travis.yml  LICENSE  Makefile  README.md  changelog.md  doctemplates.cabal  stack.yaml
.github/workflows/: ci.yml
bench/: bench.hs
src/Text/: DocTemplates.hs
src/Text/DocTemplates/: Internal.hs  Parser.hs
test/: Spec.hs  bad.txt  basic-with-braces.test  basic-with-it.test  basic.test  boilerplate.txt  boolean.test  comments.test  conditionals.test  elseif.test  empty.test  enum.txt  filters.test  final-newline.test  forloop.test  indent.test  index.test  inparens.txt  loop-in-object.test  loop-in-partial.test  loop1.txt  loop2.txt  name.tex  name.txt  nest.test  nested-loop.test  numbers.test  pad.test  partial_foo.txt  partials.test  pipe-and-partial.test  pipes.test  space-in-loop.test  test.hs  values.test
