name:                doctemplates
version:             0.1.0.0
synopsis:            Pandoc-style document templates
description:         Please see README.md
homepage:            https://github.com/jgm/doctemplates#readme
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           2016 John MacFarlane
category:            Text
build-type:          Simple
-- extra-source-files:
data-files:          README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.DocTemplates
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       bytestring,
                       blaze-markup,
                       blaze-html,
                       text,
                       containers,
                       vector,
                       parsec,
                       unordered-containers,
                       scientific
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

test-suite doctemplates-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       doctemplates,
                       aeson,
                       hspec,
                       text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jgm/doctemplates
