name:                doctemplates
version:             0.3.0.1
synopsis:            Pandoc-style document templates
description:         A simple text templating system used by pandoc.
homepage:            https://github.com/jgm/doctemplates#readme
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           2016 John MacFarlane
category:            Text
build-type:          Simple
-- extra-source-files:
data-files:          README.md
                     changelog.md
extra-source-files:  test/*.test
                     test/*.txt
                     test/*.tex
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.DocTemplates
  build-depends:       base >= 4.9 && < 5,
                       aeson,
                       text,
                       containers,
                       vector,
                       filepath,
                       parsec,
                       mtl,
                       unordered-containers,
                       scientific
  if !impl(ghc >= 8.0)
    build-depends:     semigroups == 0.18.*
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

test-suite doctemplates-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base,
                       doctemplates,
                       mtl,
                       aeson,
                       Glob,
                       tasty,
                       tasty-golden,
                       tasty-hunit,
                       filepath,
                       temporary,
                       bytestring,
                       text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jgm/doctemplates
