name:                doctemplates
version:             0.7
synopsis:            Pandoc-style document templates
description:         This is the text templating system used by pandoc.
                     It supports variable interpolation, iteration,
                     tests for non-blank values, and partials.  Templates
                     may be rendered to a variety of formats, including
                     doclayout Docs, and variable values may come from
                     a variety of different sources, including aeson
                     Values.
homepage:            https://github.com/jgm/doctemplates#readme
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           2016 John MacFarlane
category:            Text
build-type:          Simple
-- extra-source-files:
data-files:          README.md
                     changelog.md
extra-source-files:  test/*.test
                     test/*.txt
                     test/*.tex
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.DocTemplates
                       Text.DocTemplates.Parser
                       Text.DocTemplates.Internal
  build-depends:       base >= 4.9 && < 5,
                       safe,
                       text-conversions,
                       aeson,
                       HsYAML,
                       text,
                       doclayout >= 0.2 && < 0.3,
                       containers,
                       vector,
                       filepath,
                       parsec,
                       mtl,
                       unordered-containers,
                       scientific
  if !impl(ghc >= 8.0)
    build-depends:     semigroups == 0.18.*
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

test-suite doctemplates-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base,
                       doctemplates,
                       doclayout >= 0.2 && < 0.3,
                       aeson,
                       Glob,
                       tasty,
                       tasty-golden,
                       tasty-hunit,
                       filepath,
                       temporary,
                       bytestring,
                       text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark doctemplates-bench
  Type:            exitcode-stdio-1.0
  Main-Is:         bench.hs
  Hs-Source-Dirs:  bench
  Build-Depends:   doctemplates,
                   doclayout >= 0.2 && < 0.3,
                   base >= 4.8 && < 5,
                   criterion >= 1.0 && < 1.6,
                   filepath,
                   aeson,
                   text,
                   containers,
                   mtl
  Ghc-Options:   -rtsopts -Wall -fno-warn-unused-do-bind
  Default-Language: Haskell2010


source-repository head
  type:     git
  location: https://github.com/jgm/doctemplates
